[package]
name = "chat_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13", default-features = false, features = ["mp3"] }
bevy-inspector-egui = "0.14"
bevy_asset_loader = "0.14.1"
bevy_ecs_tilemap = "0.9.0"
bevy_ecs_ldtk = "0.5.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
